Issue #AAPLUS-531 by rimi-itk: Fixed flashes that are not visible due to scrolling

--- a/web/css/aaplus-styles.css
+++ b/web/css/aaplus-styles.css
@@ -661,6 +661,14 @@ table.configuration-settings td:nth-child(2) {
     cursor: not-allowed;
 }
 
+.aaplus-flashes.fixed {
+	position: fixed;
+	z-index: 9999;
+	top: 60px;
+	left: 10px;
+	right: 10px;
+}
+
 tr:target td {
 	background-color: #ffc;
 }
